--- a/src/app/components/board/board.component.scss
+++ b/src/app/components/board/board.component.scss
@@ -18,24 +18,24 @@
     &:nth-child(odd) {
         .column {
             &:nth-child(odd) {
-                background: #fff;
-                color: #000;
+                background: #eccb45;;
+                color: red;
             }
             &:nth-child(even) {
-                background: #000;
-                color: #fff;
+                background: #e15049;
+                color: red;
             }
         }
     }
     &:nth-child(even) {
         .column {
             &:nth-child(even) {
-                background: #fff;
-                color: #000;
+                background: #eccb45;
+                color: red;
             }
             &:nth-child(odd) {
-                background: #000;
-                color: #fff;
+                background: #e15049;
+                color: red;
             }
         }
     }
