--- a/src/app/components/piece/piece.component.html
+++ b/src/app/components/piece/piece.component.html
@@ -4,5 +4,5 @@
     [class.player0]="!data.player"
     [class.player1]="data.player"
 >
-    {{data.name}}
+    <span class="icon icon-chess-{{data.icon}}"></span>
 </div>
