--- a/src/app/components/block/block.component.scss
+++ b/src/app/components/block/block.component.scss
@@ -5,6 +5,6 @@
 .block {
     width: 100%; height: 100%;
     &.active {
-        background: gray;
+        background: rgba(0, 0, 0, 0.2);
     }
 }
