--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,50 @@ app-root {
     display: block;
     height: 100%;
 }
+
+@font-face {
+    font-family: 'icomoon';
+    src:  url('/assets/fonts/icomoon.eot?f3r3ek');
+    src:  url('/assets/fonts/icomoon.eot?f3r3ek#iefix') format('embedded-opentype'),
+      url('/assets/fonts/icomoon.ttf?f3r3ek') format('truetype'),
+      url('/assets/fonts/icomoon.woff?f3r3ek') format('woff'),
+      url('/assets/fonts/icomoon.svg?f3r3ek#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+  }
+  
+  [class^="icon-"], [class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+  
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  .icon-chess-king:before {
+    content: "\e972";
+  }
+  .icon-chess-queen:before {
+    content: "\e973";
+  }
+  .icon-chess-rook:before {
+    content: "\e974";
+  }
+  .icon-chess-bishop:before {
+    content: "\e975";
+  }
+  .icon-chess-knight:before {
+    content: "\e976";
+  }
+  .icon-chess-pawn:before {
+    content: "\e977";
+  }
+  
