--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -6,4 +6,11 @@
             class="column"
         ></app-block>
     </div>
+
+    <ul>
+    <li class="text" *ngFor="let item of testItems | async">
+        {{item.name}}
+    </li>
+    </ul>
+
 </div>
